// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`list-item : list-item 1`] = `
Object {
  "attrs": Object {},
  "children": Array [
    Object {
      "attrs": Object {
        "src": "./img/img1.png",
      },
      "children": Array [],
      "extraInfo": Object {},
      "type": "Image",
    },
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "text": "大型犬只野兽派洗剪吹，凶悍大叔专业洗狗12年，洗遍天下无敌狗啦啦…",
              },
              "children": Array [],
              "extraInfo": Object {},
              "type": "Text",
            },
            Object {
              "attrs": Object {
                "text": "¥20～¥160",
              },
              "children": Array [],
              "extraInfo": Object {},
              "type": "Text",
            },
          ],
          "extraInfo": Object {
            "isMergeNode": true,
          },
          "type": "Block",
        },
      ],
      "extraInfo": Object {
        "isTempContainerNode": true,
        "tempCnntainerFlag": "right::contain",
      },
      "type": "Block",
    },
  ],
  "extraInfo": Object {},
  "type": "Block",
}
`;

exports[`list-origin1 : list-origin1 1`] = `
Object {
  "attrs": Object {},
  "children": Array [
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {
            "text": "为您推荐",
          },
          "children": Array [],
          "extraInfo": Object {},
          "type": "Text",
        },
      ],
      "extraInfo": Object {},
      "type": "Block",
    },
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {},
                  "children": Array [
                    Object {
                      "attrs": Object {
                        "src": "./img/img3.png",
                      },
                      "children": Array [],
                      "extraInfo": Object {},
                      "type": "Image",
                    },
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {},
                          "children": Array [
                            Object {
                              "attrs": Object {
                                "text": "大型犬只野兽派洗剪吹，凶悍大叔专业洗狗12年，洗遍天下无敌狗啦啦…",
                              },
                              "children": Array [],
                              "extraInfo": Object {},
                              "type": "Text",
                            },
                            Object {
                              "attrs": Object {
                                "text": "¥20～¥160",
                              },
                              "children": Array [],
                              "extraInfo": Object {},
                              "type": "Text",
                            },
                          ],
                          "extraInfo": Object {
                            "isMergeNode": true,
                          },
                          "type": "Block",
                        },
                      ],
                      "extraInfo": Object {
                        "isTempContainerNode": true,
                        "tempCnntainerFlag": "right::contain",
                      },
                      "type": "Block",
                    },
                  ],
                  "extraInfo": Object {
                    "isMergeNode": true,
                  },
                  "type": "Block",
                },
                Object {
                  "attrs": Object {},
                  "children": Array [
                    Object {
                      "attrs": Object {
                        "src": "./img/img5.png",
                      },
                      "children": Array [],
                      "extraInfo": Object {},
                      "type": "Image",
                    },
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {},
                          "children": Array [
                            Object {
                              "attrs": Object {
                                "text": "大型犬野兽派洗剪吹A套餐",
                              },
                              "children": Array [],
                              "extraInfo": Object {},
                              "type": "Text",
                            },
                            Object {
                              "attrs": Object {
                                "text": "¥20～¥75",
                              },
                              "children": Array [],
                              "extraInfo": Object {},
                              "type": "Text",
                            },
                          ],
                          "extraInfo": Object {
                            "isMergeNode": true,
                          },
                          "type": "Block",
                        },
                      ],
                      "extraInfo": Object {
                        "isTempContainerNode": true,
                        "tempCnntainerFlag": "right::contain",
                      },
                      "type": "Block",
                    },
                  ],
                  "extraInfo": Object {
                    "isMergeNode": true,
                  },
                  "type": "Block",
                },
                Object {
                  "attrs": Object {},
                  "children": Array [
                    Object {
                      "attrs": Object {
                        "src": "./img/img4.png",
                      },
                      "children": Array [],
                      "extraInfo": Object {},
                      "type": "Image",
                    },
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {},
                          "children": Array [
                            Object {
                              "attrs": Object {
                                "text": "大型犬只野兽派洗剪吹，凶悍大叔专业洗狗12年，洗遍天下狗",
                              },
                              "children": Array [],
                              "extraInfo": Object {},
                              "type": "Text",
                            },
                            Object {
                              "attrs": Object {
                                "text": "¥20～¥160",
                              },
                              "children": Array [],
                              "extraInfo": Object {},
                              "type": "Text",
                            },
                          ],
                          "extraInfo": Object {
                            "isMergeNode": true,
                          },
                          "type": "Block",
                        },
                      ],
                      "extraInfo": Object {
                        "isTempContainerNode": true,
                        "tempCnntainerFlag": "right::contain",
                      },
                      "type": "Block",
                    },
                  ],
                  "extraInfo": Object {
                    "isMergeNode": true,
                  },
                  "type": "Block",
                },
                Object {
                  "attrs": Object {},
                  "children": Array [
                    Object {
                      "attrs": Object {
                        "src": "./img/img6.png",
                      },
                      "children": Array [],
                      "extraInfo": Object {},
                      "type": "Image",
                    },
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {},
                          "children": Array [
                            Object {
                              "attrs": Object {
                                "text": "小型犬洗剪吹B套餐",
                              },
                              "children": Array [],
                              "extraInfo": Object {},
                              "type": "Text",
                            },
                            Object {
                              "attrs": Object {
                                "text": "¥20～¥75",
                              },
                              "children": Array [],
                              "extraInfo": Object {},
                              "type": "Text",
                            },
                          ],
                          "extraInfo": Object {
                            "isMergeNode": true,
                          },
                          "type": "Block",
                        },
                      ],
                      "extraInfo": Object {
                        "isTempContainerNode": true,
                        "tempCnntainerFlag": "right::contain",
                      },
                      "type": "Block",
                    },
                  ],
                  "extraInfo": Object {
                    "isMergeNode": true,
                  },
                  "type": "Block",
                },
              ],
              "extraInfo": Object {
                "sameNode": true,
              },
              "type": "Block",
            },
            Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {
                    "text": "更多服务/商品",
                  },
                  "children": Array [],
                  "extraInfo": Object {},
                  "type": "Text",
                },
              ],
              "extraInfo": Object {},
              "type": "Block",
            },
          ],
          "extraInfo": Object {
            "isMergeNode": true,
          },
          "type": "Block",
        },
      ],
      "extraInfo": Object {
        "isTempContainerNode": true,
        "tempCnntainerFlag": "contain::right",
      },
      "type": "Block",
    },
  ],
  "extraInfo": Object {},
  "type": "Block",
}
`;
